# perry-the-docker-agent

./: .gitlab-ci.yml  README.md  makefile  perry_config.yml  pyproject.toml
.github/workflows/: release.yaml
perry/: config.py  constants.py  core.py  main.py  providers.py
perry_the_docker_agent/: config.py  constants.py  core.py  main.py  providers.py  util.py
perry_the_docker_agent/sceptre/config/dev/: config.yaml
